Prevent wrapped spaces in navbar

--- a/exodus/static/css/exodus.css
+++ b/exodus/static/css/exodus.css
@@ -93,3 +93,6 @@ select.custom-select {
   -moz-appearance: none;
   width: auto;
 }
+ul.navbar-nav {
+  white-space: nowrap;
+}
